[gd_scene load_steps=11 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://futur.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://puppy_dog_white_outline.png" type="Texture" id=3]
[ext_resource path="res://small-dog-barking_daniel-simion.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 2 )

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="background" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="color_bg" type="ColorRect" parent="background"]
margin_right = 800.0
margin_bottom = 800.0
color = Color( 0, 0, 0, 1 )

[node name="title" type="Label" parent="background"]
margin_right = 800.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "The food doggy likes"
align = 1

[node name="falling_pos" type="Position2D" parent="."]
position = Vector2( 400, 100 )

[node name="foods" type="Node2D" parent="."]

[node name="dog" type="Area2D" parent="."]
position = Vector2( 400, 540 )

[node name="Sprite" type="Sprite" parent="dog"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="dog"]
polygon = PoolVector2Array( -81.759, -43.2688, -62.9224, -60.9973, -39.6537, -82.0499, 1.34351, -80.9419, 87.7701, 2.16058, 84.446, 32.0775, 58.9612, 38.7257, 22.3961, 56.4542, -11.9529, 71.9667, -52.9501, 83.047, -88.4072, 68.6426, -87.2992, 37.6177, -65.1385, -0.055481, -90.6233, -10.0278 )

[node name="status" type="CanvasLayer" parent="."]

[node name="points" type="Label" parent="status"]
margin_left = 559.0
margin_top = 84.0
margin_right = 778.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="dog" type="Label" parent="status"]
margin_left = 505.0
margin_top = 505.0
margin_right = 642.0
margin_bottom = 551.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="buttons" type="Control" parent="status"]
margin_right = 40.0
margin_bottom = 40.0

[node name="J" type="Label" parent="status/buttons"]
margin_left = 38.6613
margin_top = 689.049
margin_right = 249.661
margin_bottom = 785.049
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "J for bone"
align = 1
valign = 1

[node name="K" type="Label" parent="status/buttons"]
margin_left = 269.355
margin_top = 684.525
margin_right = 497.355
margin_bottom = 786.525
custom_fonts/font = SubResource( 5 )
text = "K for BOWL"
align = 1
valign = 1

[node name="L" type="Label" parent="status/buttons"]
margin_left = 517.891
margin_top = 686.842
margin_right = 760.891
margin_bottom = 792.842
custom_fonts/font = SubResource( 6 )
text = "L for steak"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]

[node name="bark" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -22.214
[connection signal="body_entered" from="dog" to="." method="_on_dog_body_entered"]
